# ImageFusionProto

./: .gitignore  .gitmodules  README.md  main.py  pydicomvtk.py  pyproject.toml  setup.py  viewer_window.py  volume_layer.py  vtkMain 12 colour options and working opacity.py  vtkMain test.py  vtkMain.py  vtkMain1 using qt.py  vtkMain1.py  vtkMain10.py  vtkMain11 orientation fixed.py  vtkMain13 all colours.py  vtkMain14 rotate about current slice.py  vtkMain15 NOT USABLE but offsets in LPS space a little.py  vtkMain16 using currently.py  vtkMain17 WORKING PREREG.py  vtkMain18 PREREG WORKING.py  vtkMain19 PREREG with rotation.py  vtkMain2 vtk chkpt 1.py  vtkMain20 import all dicom types (no removing temp files).py  vtkMain21 PREREGISTRATION WORKING YESSSSS.py  vtkMain22 temp handling.py  vtkMain23 rotate in progress.py  vtkMain24 pivot correct.py  vtkMain25 fixed pivot and rot about current slice.py  vtkMain26 time for math.py  vtkMain27 super close.py  vtkMain28 i give up - rotation about RAS.py  vtkMain29 rot RAS matrix accurate.py  vtkMain3 vtk chkpt 2.py  vtkMain30 SITK rotate about current slice.py  vtkMain31 SITK rotate about ALL current slices.py  vtkMain32 baking transform (has cutoff).py  vtkMain32 changes.py  vtkMain33 baking transform fixed cutoff.py  (+6 more)
Controller/: base_view_controller.py  viewer_controller.py  viewer_controller_Axial.py  viewer_controller_coronal.py  viewer_controller_sagittal.py
GUI/: AxialViewer.py  CoronalViewer.py  ImageViewer.py  MultiViewWidget.py  SagittalViewer.py  base_viewer_GUI.py  extra_controls.py  main_window.py  rotation_panel.py  (+1 more)
(+3 files in other folders)
