[project]
name = "imagefusionproto"
version = "0.1.0"
description = ""
authors = [
    {name = "Nowhere4Nothing",email = "wmahler03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "pyside6 (>=6.9.1,<7.0.0)",
    "simpleitk (>=2.5.2,<3.0.0)",
    "opencv-python >=4.10.0,<5.0.0" # this lets the proram input different layers if they are different sized dcm
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
